--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>telegrambots</artifactId>
             <version>6.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>0.11.4</version>
+        </dependency>
     </dependencies>
 
 </project>
